--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,3 +24,8 @@
 [[constraint]]
   name = "github.com/stretchr/testify"
   version = "1.3.0"
+
+[[constraint]]
+  name = "github.com/Clever/analytics-latency-config-service"
+  version = "0.2.1"
+
