--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: /go/src/github.com/Clever/analytics-util
+    working_directory: ~/go/src/github.com/Clever/analytics-util
     docker:
     - image: cimg/go:1.21
     environment:
